--- a/80days/templates/teams/teams.html
+++ b/80days/templates/teams/teams.html
@@ -1,4 +1,6 @@
 <team-list></team-list>
 controller: {$ name $}<br />
 
+{$ teams $}
+
 <button ng-click="teamsController.showCompetition()">Alert compo</button>
