--- a/80days/templates/competition/enter.html
+++ b/80days/templates/competition/enter.html
@@ -1,8 +1,11 @@
 
 <div>
+  <pre>$route.current.scope.name = {$ $route.current.scope.name $}</pre>
+  <pre>me = {$ me $}</pre>
+  <pre>CompetitorsController.me = {$ CompetitorsController.me $}</pre>
   <form name="enterForm" 
-	ng-submit="enterForm.$valid && enrol.enrol(competition, comps)" novalidate>
-    Nick-name: <input type="text" ng-model="enrol.competitor.nickname"
+	ng-submit="enterForm.$valid && enrol()" novalidate>
+    Nick-name: <input type="text" ng-model="me.nickname"
                       placeholder="Phileas Fogg" required>
     <input type="submit" value="Enter Competion"/>
   </form>
