--- a/80days/templates/competition/enter.html
+++ b/80days/templates/competition/enter.html
@@ -1,10 +1,7 @@
 
 <div>
-  <pre>$route.current.scope.name = {$ $route.current.scope.name $}</pre>
-  <pre>me = {$ me $}</pre>
-  <pre>CompetitorsController.me = {$ CompetitorsController.me $}</pre>
   <form name="enterForm" 
-	ng-submit="enterForm.$valid && enrol()" novalidate>
+	ng-submit="enterForm.$valid && competitorController.enrol()" novalidate>
     Nick-name: <input type="text" ng-model="me.nickname"
                       placeholder="Phileas Fogg" required>
     <input type="submit" value="Enter Competion"/>
