--- a/80days/templates/base.html
+++ b/80days/templates/base.html
@@ -57,6 +57,7 @@
   <script src={% static "bower_components/angular/angular.js"%}></script>
   <script src={% static "bower_components/angular-route/angular-route.js"%}></script>
   <script src={% static "bower_components/angular-cookies/angular-cookies.js"%}></script>
+  <script src={% static "bower_components/angular-resource/angular-resource.js"%}></script>
   {% endblock %}
 
   {% block appcode %}
