Team creation pretty much working.

--- a/80days/templates/competitors/competitors.html
+++ b/80days/templates/competitors/competitors.html
@@ -1,5 +1,5 @@
 
-<div ng-hide="competitorController.me.id">
+<div ng-hide="my_competitors[0]">
   <competition-enter></competition-enter>
 </div>
 
