--- a/80days/templates/competition/panels.html
+++ b/80days/templates/competition/panels.html
@@ -1,4 +1,4 @@
-<section class="competition">
+<section class="competition" ng-controller="CompetitionController as cc">
 <!--[if lt IE 7]>
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
